smokeping/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: smokeping
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: smokeping
    spec:
      nodeSelector:
        kubernetes.io/hostname: biggs.radoncanyon.com
      volumes:
      - name: smokeping
        hostPath:
          path: /dockerfs/smokeping
      - name: oauth2-proxy
        secret:
          secretName: oauth2-proxy
      containers:
      - name: smokeping
        image: linuxserver/smokeping
        volumeMounts:
        - name: smokeping
          subPath: config
          mountPath: /config
        - name: smokeping
          subPath: data
          mountPath: /data
        ports:
        - name: smokeping
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /smokeping/smokeping.cgi
            port: smokeping
          initialDelaySeconds: 60
          periodSeconds: 5
