smokeping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smokeping
spec:
  selector:
    app: smokeping
  ports:
  - name: smokeping
    port: 80
    targetPort: 4180
  - name: smokeping-backend
    port: 8080
    targetPort: 80
