smokeping/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smokeping
  annotations:
    ingress.kubernetes.io/proxy-body-size: "2m"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - smokeping.desertbluffs.com
    secretName: smokeping-tls
  rules:
  - host: smokeping.desertbluffs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: smokeping
          servicePort: 80
